--- a/dev/assets/scss/_config.scss
+++ b/dev/assets/scss/_config.scss
@@ -1,17 +1,29 @@
 // Your custom KoiCSS overwrites
 
+@use 'sass:list';
+
 @use 'koi' with (
   $settings: (
     //   prefix: 'koi',
+    // typography:
+    //   (
+    //     headings-font-family: (
+    //       Lato,
+    //       ui-sans-serif,
+    //       system-ui,
+    //       sans-serif,
+    //     )
+    //   )
   ),
   $theme: (
     color-schemes: (
-      light: (
+      // light: (
         // heading: rgb(102, 46, 233),
-      ),
-      dark: (
+        // surface: (1: rgb(243 244 246))
+      // ),
+      // dark: (
         // heading: rgb(46, 183, 233),
-      ),
+      // ),
     ),
   )
 );
