--- a/scss/config/_internal.scss
+++ b/scss/config/_internal.scss
@@ -7,5 +7,6 @@
 $animation-prefix: anim;
 $color-prefix: color;
 $delay-prefix: delay;
+$gradient-prefix: gradient;
 $duration-prefix: duration;
 $shadow-prefix: shadow;
