--- a/dev/assets/scss/_base.scss
+++ b/dev/assets/scss/_base.scss
@@ -13,7 +13,7 @@
 
 body {
   padding: 32px;
-  // background: #444;
+  // background: rgb(250, 250, 250);
   // color: #ccc;
 }
 
@@ -33,15 +33,18 @@ body {
 
 .my-box-1,
 .my-box-2 {
-  @include koi.box($padding: true);
-  @include koi.border(koi.fill(grey, 8), $radius: koi.radius(xl));
-  // @include koi.fluid-margin-block();
+  @include koi.box($padding: true, $shadow: md);
+  @include koi.border(koi.fill(grey, 8), $radius: koi.radius(lg));
+  @include koi.transition-shadow();
+
+  &:hover {
+    @include koi.shadow(xl);
+  }
 }
 
 .my-box-1 {
-  // background-color: koi.fill(danger, 0);
-  background: koi.gradient(6);
-  color: koi.fill(white);
+  background: var(--gradient-10);
+  color: koi.fill(black);
 
   @include koi.dark-mode {
     background-color: koi.fill(danger, 9, 0.25);
@@ -49,11 +52,26 @@ body {
 }
 
 .my-box-2 {
-  // background-color: koi.fill(primary, 0);
+  // --koi-gradient-direction: 100deg;
   background: koi.gradient(9);
   color: koi.fill(black);
 
   @include koi.dark-mode {
     background-color: koi.fill(primary, 9, 0.25);
   }
+}
+
+.box-s2 {
+  @include koi.box($padding: true, $rounded: true, $bg-color: koi.fill(surface, 2));
+  @include koi.border();
+}
+
+.box-s3 {
+  @include koi.box($padding: true, $rounded: true, $bg-color: koi.fill(surface, 3));
+  @include koi.border();
+}
+
+.box-s4 {
+  @include koi.box($padding: true, $rounded: true, $bg-color: koi.fill(surface, 4));
+  @include koi.border();
 }
