--- a/scss/api/_typography.scss
+++ b/scss/api/_typography.scss
@@ -33,11 +33,7 @@ $_default-tracking: setting(fallbacks, tracking);
   @return list.nth(theme(font-size, $font-size), 1);
 }
 
-@function fluid-font-size(
-  $min-font-size,
-  $max-font-size,
-  $preferred-font-size: setting(typography, preferred-fluid-font-size)
-) {
+@function fluid-font-size($min-font-size, $max-font-size, $preferred-font-size: setting(typography, fluid-font-size)) {
   $min-font-size: if(theme-has-key(font-size, $min-font-size), font-size($min-font-size), $min-font-size);
   $max-font-size: if(theme-has-key(font-size, $max-font-size), font-size($max-font-size), $max-font-size);
 
