--- a/scss/components/_keyboard.scss
+++ b/scss/components/_keyboard.scss
@@ -22,6 +22,11 @@ $_class: '.kbd';
   box-shadow: 0 calc($key-height + 1px) 0 -2px var(--koi-key-border-1, fill(grey, 1)),
     0 $key-height 0 0 var(--koi-key-border-2, fill(grey, 2)), shadow();
   color: var(--koi-key-text, fill(text, 2));
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 2em;
+  min-width: 2em;
   font-family: font(mono);
   font-size: 0.875em;
   font-weight: 500;
@@ -32,7 +37,7 @@ $_class: '.kbd';
   @include dark-mode {
     --koi-key-bg: #{fill(grey, 9)};
     --koi-key-text: #{fill(grey, 4)};
-    --koi-key-border-1: #{fill(grey, 7)};
+    --koi-key-border-1: #{fill(grey, 8)};
     --koi-key-border-2: #{fill(grey, 8)};
   }
 }
