--- a/scss/config/_settings.scss
+++ b/scss/config/_settings.scss
@@ -25,17 +25,21 @@ $_default-settings: (
   use-utilities: false,
   use-css-variables: true,
   default-color-scheme: light,
+  default-accent: primary,
   typography: (
     use-hyphens: true,
     base-font-size: 16,
     base-font-family: list.join(Lato, $_font-sans),
     body-font-size: lg,
+    headings-color: text-1,
     headings-font-family: list.join(Montserrat, $_font-sans),
-    headings-font-weight: 700,
+    headings-font-weight: medium,
     headings-font-size: 5xl 4xl 3xl 2xl xl lg,
     headings-spacing-ratio: 1.125,
     lead-font-size: xl,
     fluid-font-size: '2vw + 1rem',
+    inline-text-padding: 0.05em 0.15em,
+    mark-background: hsl(50 100% 85%),
   ),
   layout: (
     fluid-padding: (
@@ -49,7 +53,6 @@ $_default-settings: (
     use-important: false,
   ),
   fallbacks: (
-    accent: primary,
     border-width: 1,
     colors: 6,
     duration: normal,
