--- a/scss/internal/_color.scss
+++ b/scss/internal/_color.scss
@@ -7,7 +7,7 @@
 @use 'sass:meta';
 
 @use '../config/internal' as *;
-@use '../helpers/color' as *;
+@use '../helpers' as *;
 @use 'output' as *;
 
 // --------------------------------
