--- a/scss/config/_settings.scss
+++ b/scss/config/_settings.scss
@@ -26,36 +26,11 @@ $_default-settings: (
   use-css-variables: true,
   default-color-scheme: light,
   default-accent: primary,
-  typography: (
-    use-hyphens: true,
-    base-font-size: 16,
-    base-font-family: list.join(Lato, $_font-sans),
-    body-font-size: lg,
-    headings-color: text-1,
-    headings-font-family: list.join(Montserrat, $_font-sans),
-    headings-font-weight: medium,
-    headings-font-size: 5xl 4xl 3xl 2xl xl lg,
-    headings-spacing-ratio: 1.125,
-    lead-font-size: xl,
-    fluid-font-size: '2vw + 1rem',
-    inline-text-padding: 0.05em 0.15em,
-    mark-background: hsl(50 100% 85%),
-  ),
-  layout: (
-    fluid-padding: (
-      min: 0.75rem,
-      max: 1.5rem,
-      fluid-value: 5%,
-    ),
-  ),
-  utilities: (
-    glue: ':',
-    use-important: false,
-  ),
   fallbacks: (
     border-width: 1,
     colors: 6,
     duration: normal,
+    font-family: sans,
     font-size: md,
     font-weight: normal,
     layer: base,
