--- a/scss/api/_typography.scss
+++ b/scss/api/_typography.scss
@@ -7,6 +7,7 @@
 @use 'sass:list';
 @use 'sass:string';
 
+@use '../config';
 @use '../helpers' as *;
 @use 'setting' as *;
 @use 'theme' as *;
@@ -41,7 +42,7 @@ $_default-tracking: setting(fallbacks, tracking);
   }
 }
 
-@function fluid-font-size($min-font-size, $max-font-size, $preferred-font-size: setting(typography, fluid-font-size)) {
+@function fluid-font-size($min-font-size, $max-font-size, $preferred-font-size: config.$fluid-font-size) {
   $min-font-size: if(theme-has-key(font-size, $min-font-size), font-size($min-font-size), $min-font-size);
   $max-font-size: if(theme-has-key(font-size, $max-font-size), font-size($max-font-size), $max-font-size);
 
