--- a/scss/config/_index.scss
+++ b/scss/config/_index.scss
@@ -1,2 +1,5 @@
 @forward 'settings' show $settings;
 @forward 'theme' show $theme;
+@forward 'layout';
+@forward 'typography';
+@forward 'utilities';
