--- a/scss/helpers/_unit.scss
+++ b/scss/helpers/_unit.scss
@@ -2,13 +2,10 @@
 //   Unit Helpers
 // --------------------------------
 
-@use 'sass:map';
 @use 'sass:math';
 @use 'sass:meta';
 
-@use '../config' as *;
-
-$_base-font-size: map.get($settings, typography, base-font-size);
+@use '../config';
 
 /// Convert a value in pixels (px) to rem.
 ///
@@ -19,7 +16,7 @@ $_base-font-size: map.get($settings, typography, base-font-size);
 ///
 /// @return {number} `$value-in-pixel` in rem.
 ///
-@function rem($value-in-pixel, $base-font-size: $_base-font-size) {
+@function rem($value-in-pixel, $base-font-size: config.$base-font-size) {
   @if $value-in-pixel == null {
     @return null;
   }
@@ -49,7 +46,7 @@ $_base-font-size: map.get($settings, typography, base-font-size);
 ///
 /// @return {number} `$value-in-rem` in px.
 ///
-@function rem-to-px($value-in-rem, $base-font-size: $_base-font-size) {
+@function rem-to-px($value-in-rem, $base-font-size: config.$base-font-size) {
   @if $value-in-rem == null {
     @return null;
   }
